modified navbar styling for ease of use on mobile, and fixed event handler for window resizing

--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -31,7 +31,8 @@
 
     --font-size-sm: .75rem;
     --font-size-md: 1rem;
-    --font-size-lg: 1.5rem;
+    --font-size-lg: 1.25rem;
+    --font-size-xl: 1.5rem;
 }
 
 $font-family-sans-serif:
